--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -52,4 +52,13 @@
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/logo_font_size"
         />
+    <TextView
+        android:id="@+id/roll_sum"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/roll_results"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/logo_font_size"
+        />
 </RelativeLayout>
