Setting colors for players when they're active Every player can roll 3 times Counting score Finding best score

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -61,4 +61,13 @@
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/logo_font_size"
         />
+    <TextView
+        android:id="@+id/roll_bestScore"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/roll_sum"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/logo_font_size"
+        />
 </RelativeLayout>
