--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,7 +23,16 @@
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/logo_font_size"
         />
-
+    <TextView
+        android:id="@+id/player1Score"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/player1"
+        android:layout_below="@id/app_name"
+        android:paddingLeft="6dp"
+        android:textSize="@dimen/logo_font_size"
+        />
     <TextView
         android:id="@+id/player2"
         android:text=""
@@ -31,6 +40,16 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/player1"
         android:layout_centerHorizontal="true"
+        android:textSize="@dimen/logo_font_size"
+        />
+    <TextView
+        android:id="@+id/player2Score"
+        android:text=""
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/player1"
+        android:layout_toRightOf="@id/player2"
+        android:paddingLeft="6dp"
         android:textSize="@dimen/logo_font_size"
         />
     <Button
