--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -58,9 +58,18 @@
         android:layout_height="wrap_content"
         android:text="@string/roll"
         android:layout_below="@id/player2"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop_screen1"
         android:onClick="onClickRollTheDice"
+        />
+    <Button
+        android:id="@+id/btn_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STOP"
+        android:layout_below="@id/player2"
+        android:layout_marginTop="@dimen/marginTop_screen1"
+        android:layout_toRightOf="@id/btn_roll"
+        android:onClick="onClickStop"
         />
     <TextView
         android:id="@+id/roll_results"
@@ -89,4 +98,6 @@
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/logo_font_size"
         />
+
+
 </RelativeLayout>
