--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding='@dimen/padding_screen'
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/layout">
     <TextView
         android:id="@+id/app_name"
         android:text="@string/app_name"
@@ -23,6 +24,7 @@
         android:layout_below="@id/app_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop_screen1"
+        android:saveEnabled="false"
         />
     <EditText
         android:id="@+id/player2_name"
@@ -33,6 +35,7 @@
         android:layout_below="@id/player1_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop_screen1"
+        android:saveEnabled="false"
         />
     <Button
         android:id="@+id/btn_play"
