--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,6 @@
 <resources>
     <dimen name="padding_screen">16dp</dimen>
     <dimen name="logo_font_size">32sp</dimen>
-    <dimen name="marginTop_screen1">16sp</dimen>
+    <dimen name="marginTop_screen1">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 </resources>
